- handle new drivers:
  o pata: pata_cs5536
  o sata: sata_fsl
  o wireless: b43, b43legacy, iwlwifi, libertas_cs, p54pci, p54usb
- localedrake:
  o adjust Uzbek locale (cf locales-uz change)

Version 10.5.7 - 6 December 2007, by Thierry Vignaud

- handle new drivers: e1000e, snd-oxygen, snd-pcsp
- bootloader-config:
  o do not drop entries "failsafe" and "linux-nonfb" when removing a kernel
- localedrake:
  o adapt to cooker: scim-tables-skim is now skim-scim-tables
  o restrict the proposed input-methods for each language
- bootloader:
  o when reading existing menu.lst, keep verbatim entries for which the device
  has no mount-point
  o handle "alien" grub entries that will be kept verbatim (#23591)
  o handle "root (hd...)" for menu.lst entries (#23591)
    (nb: when writing, "root ..." will not be used)
- diskdrake:
  o drop "Undo", "Restore partition table", "Save partition table"
    (preparing to switch to libparted)
  o fix garbaged error messages when umounting fs
  o disallow "Use for loopback" when the partition used for loopback is
    not formatted (#35535)
  o always display the {info} field of the drive (not only in expert mode)

Version 10.5.3 - 9 November 2007, by Pascal "Pixel" Rigaux

- bootloader-config:
  o do not create "linux" entries for xen kernels, but "xen" entries instead
- localedrake:
  o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
- drakbug:
  o prevent altering tool and the like when catching a bug (#35241)

Version 10.5.2 - 6 November 2007, by Thierry Vignaud

- diskdrake:
  o add support for ext4
- drakbug:
  o keep buggy process around so that we can run gdb on it (if perl segfaulted)
  o report gdb trace if possible
- harddrake: detect storage and various controllers before anything else
  (so that storage devices get detected at first boot on live)

Version 10.5.1 - 31 October 2007, by Thierry Vignaud

- bootloader-config:
  o bootloader-config must not need network::network from libdrakx-net