@@ -1,4 +1,6 @@
 - handle new drivers:
+  o ethernet: fec_mpc52xx, niu
+  o gigabit: tehuti
   o pata: pata_cs5536
   o sata: sata_fsl
   o wireless: b43, b43legacy, iwlwifi, libertas_cs, p54pci, p54usb
